Fixes an overflow issue with the first tv show item

--- a/src/style/views/home.scss
+++ b/src/style/views/home.scss
@@ -25,7 +25,6 @@ $home-search-wrapper-height: 7.5vh;
 
 .tv-search--wrapper {
   margin: 0;
-  height: $home-search-height;
 }
 
 .search-result-list--wrapper {
